[gd_scene load_steps=4 format=3 uid="uid://djixjlps6o112"]

[ext_resource type="Texture2D" uid="uid://6y412rwx1hbf" path="res://Assets/scroll.png" id="1_gl6un"]
[ext_resource type="Script" uid="uid://cs0jqpctjeomk" path="res://Scripts/game.gd" id="1_kldst"]
[ext_resource type="Texture2D" uid="uid://c35v7xcvgrabj" path="res://Assets/monitor.png" id="2_j5yw3"]

[node name="Game" type="Node2D"]
script = ExtResource("1_kldst")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1156.0
offset_bottom = 649.0
color = Color(0.913725, 1, 1, 1)

[node name="Plan" type="Sprite2D" parent="."]
position = Vector2(274, 179)
scale = Vector2(0.654297, 0.654297)
texture = ExtResource("1_gl6un")

[node name="Monitor" type="Sprite2D" parent="."]
position = Vector2(864.75, 310.25)
scale = Vector2(1.19238, 1.19238)
texture = ExtResource("2_j5yw3")

[node name="LeftGrid" type="GridContainer" parent="."]
unique_name_in_owner = true
offset_left = 158.0
offset_top = 368.0
offset_right = 402.0
offset_bottom = 588.0

[node name="RightGrid" type="GridContainer" parent="."]
unique_name_in_owner = true
offset_left = 623.0
offset_top = 121.0
offset_right = 1078.0
offset_bottom = 364.0

[node name="SolutionGrid" type="GridContainer" parent="."]
unique_name_in_owner = true
offset_left = 160.0
offset_top = 31.0
offset_right = 390.0
offset_bottom = 241.0

[node name="CheckSolution" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 826.0
offset_top = 31.0
offset_right = 900.0
offset_bottom = 62.0
text = "Drucken"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 726.0
offset_top = 561.0
offset_right = 1008.0
offset_bottom = 600.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Das war leider falsch"

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(400, 400)

[node name="Sprite2D2" type="Sprite2D" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="CheckSolution" to="." method="_on_check_solution_pressed"]
